Alignment fixes.

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -139,6 +139,7 @@ h6 {
 
 .navbar-default .navbar-nav>li>a {
     color: #ffffff;
+    padding-right: 0;
 }
 
 @media (max-width: 768px) {
@@ -1975,7 +1976,7 @@ footer .copyright {
 }
 
 .content, .our-team {
-    padding: 40px 60px;
+    padding: 40px 80px;
     float: left;
     background-color: white;
     width: 100%;
